# bibliomar-scrapper

./: .gitignore  Procfile  README.md  fly.toml  keys.py  main.py  pyproject.toml  requirements.txt
config/: logger_config.py  mongodb_connection.py  mysql_connection.py  redis_connection.py
functions/: database_functions.py  download_functions.py  filter_functions.py  hashing_functions.py  library_functions.py  metadata_functions.py  search_functions.py  search_index_functions.py  user_functions.py
methods/: metadata_functions.py  search_functions.py
models/: body_models.py  config_models.py  path_models.py  query_models.py  response_models.py
routers/: comments_routes.py  library_routes.py  metadata_routes.py  profile_routes.py  search_routes.py  upvotes_routes.py
routers/v1/: comments_routes.py  download_routes.py  filter_routes.py  library_routes.py  metadata_routes.py  profile_routes.py  search_routers.py  search_routes.py  upvotes_routes.py  user_routes.py
services/: user_functions.py
services/metadata/: metadata_service.py
services/search/: download_functions.py  metadata_functions.py  search_functions.py  search_index_functions.py  search_service.py
services/security/: hashing_functions.py
services/social/: comments_service.py  profile_service.py  upvotes_service.py
services/temp_cover/: cover_service.py
temp_downloads/: 6DC5A0A601B78CECFFC5EDE2538A8127.epub
tests/tests_comments/: test_comments.py
tests/tests_metadata/: test_metadata.py
tests/tests_search/: test_search.py
tests/tests_social/: test_comments.py  test_upvotes.py
