[tool.poetry]
name = "biblioterra"
version = "0.1.0"
description = ""
authors = ["lamarcke <cassiolamarcksilvafreitas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
grab-fork-from-libgen = "^1.3.3"
aioredis = "^2.0.1"
gunicorn = "^20.1.0"
slowapi = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
